--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./dist/css/main.css">
     <title>Learn sass by practice</title>
 </head>
 <body>
@@ -64,6 +64,6 @@
         <p>copyright &copy; 2019 by <span><a href="https://www.github.com/spaceofmiah">spaceofmiah</a></span></p>
     </footer>
 
-    <script src="./script/index.js"></script>
+    <script src="./dist/script/index.js"></script>
 </body>
 </html>
